# sample-data-collector

./: .gitignore  README.md
pets-ddl-scripts-loader/: build-package.sh  deploy-to-aws.sh  pyproject.toml  requirements.txt
pets-ddl-scripts-loader/pets_ddl_scripts_loader/: handler.py
